--- a/css/style.css
+++ b/css/style.css
@@ -434,10 +434,11 @@ body {
   font-size: 2rem;
   margin-bottom: 30px;
   color: #111;
+  text-align: center;
 }
 
 #estudios .row {
-  background-color: #3FB6D2; /* azul del contenedor */
+  background-color: #3cc7f5; 
   border-radius: 15px;
   padding: 40px;
   display: flex;
@@ -459,10 +460,52 @@ body {
   font-weight: 600;
   margin-bottom: 15px;
   color: #111;
+  text-align: center;
 }
 
 #estudios p {
   font-size: 0.95rem;
   line-height: 1.6;
   color: #111;
+}
+
+/* Experiencia */
+#experiencia{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  background-color: #1b1322;
+  overflow: hidden;
+  padding-bottom: 90px;
+}
+
+#experiencia h1 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin-bottom: 50px;
+  position: relative;
+  z-index: 1;
+  text-align: center;
+}
+
+#experiencia .dato {
+  background: #3cc7f5;
+  padding: 30px 30px;
+  text-align: left;
+  box-shadow: 0 4px 12px rgba(0, 207, 255, 0.2);
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+  z-index: 1;
+  position: relative;
+  flex-wrap: wrap; 
+  height: 350px;
+}
+
+#experiencia .dato p {
+  font-size: 0.95rem;
+  line-height: 1.6;
+  color: #111;
+  margin-bottom: 15px;
 }
