--- a/css/style.css
+++ b/css/style.css
@@ -3,25 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Quintessential&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1,h2,h3,h4,h5,h6 {
   font-family: "inter", sans-serif;
 }
 
 
-p,
-a,
-button,
-li,
-label,
-input,
-select,
-textarea,
-span {
+p,a,button,li,label,input,select,textarea,span {
   font-family: "roboto", sans-serif;
 }
 
@@ -37,7 +24,6 @@ body {
   overflow-x: hidden;
 }
 
-/* Barra de navegacion */
 .navbar {
   backdrop-filter: blur(8px);
   padding: 5px 50px;
@@ -210,9 +196,7 @@ body {
 .compu {
   display: flex;
   justify-content: center;
-  /* eje horizontal */
   align-items: center;
-  /* eje vertical */
   padding-left: 100px;
 }
 
@@ -222,17 +206,15 @@ body {
   display: center;
   justify-content: center;
   border: 3px solid transparent;
-  /* borde invisible de inicio */
   border-radius: 10px;
-  /* opcional, bordes redondeados */
   transition: transform 0.3s ease, border-color 0.3s ease;
   cursor: pointer;
-  /* que parezca clickeable */
 }
 
 .img-fluid:hover {
   transform: scale(1.05);
 }
+
 
 /* Perfil */
 #perfil {
@@ -273,6 +255,7 @@ body {
 .datos p {
   margin-top: 50px;
 }
+
 
 /* Habilidades */
 #habilidades {
@@ -333,7 +316,6 @@ body {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
-
 .cont h3 {
   color: black;
   font-weight: bold;
@@ -357,7 +339,6 @@ body {
   display: none;
 }
 
-
 #verMas {
   display: inline-block;
   margin: 30px auto;
@@ -379,6 +360,7 @@ body {
   transform: translateY(0);
   box-shadow: 0 2px 8px rgba(0, 207, 255, 0.4);
 }
+
 
 /* Portafolio */
 #portafolio {
@@ -409,6 +391,7 @@ body {
   height: auto;
   margin: 0 auto;
 }
+
 
 /* Estudios */
 #estudios{
@@ -469,6 +452,7 @@ body {
   color: #111;
 }
 
+
 /* Experiencia */
 #experiencia{
   display: flex;
@@ -509,3 +493,81 @@ body {
   color: #111;
   margin-bottom: 15px;
 }
+
+
+/* Hobbies */
+#hobbies{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  background-color: #1b1322;
+  overflow: hidden;
+  padding-bottom: 20px;
+}
+
+#hobbies h1{
+  font-size: 2.8rem;
+  font-weight: 700;
+  margin-bottom: 40px;
+  position: relative;
+  z-index: 1;
+  text-align: center;
+}
+
+#hobbies .row{
+  background-color: #3cc7f5; 
+  border-radius: 15px;
+  padding: 40px;
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+  align-items: flex-start;
+  text-align: left;
+  z-index: 1;
+  position: relative;
+  margin: 30px 0;
+}
+
+#hobbies .col-md-6 {
+  flex: 1;
+}
+
+#hobbies h2{
+  font-size: 2rem;
+  margin-bottom: 30px;
+  color: #111;
+  text-align: center;
+  font-weight: 700;
+}
+
+#hobbies p{
+  font-size: 0.95rem;
+  line-height: 1.6;
+  color: #111;
+  text-align: center;
+}
+
+#hobbies .redes {
+  text-align: center; 
+}
+
+#hobbies .redes-icons {
+  display: flex;
+  justify-content: center; 
+  gap: 20px;              
+  margin-top: 15px;
+}
+
+#hobbies .redes-icons img {
+  width: 50px;
+  height: 50px;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+#hobbies .redes-icons img:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 4px 12px rgba(0,0,0,0.3);
+  border-radius: 8px;
+}
+
